view/frontend/web/css/styles.css
/* ... */
.bk-card-date-wrap,
.bk-cvc-date-wrap {
    display: flex;
    justify-content: space-between;
}
.bk-date {
    margin-right: 5px;
}
.bk-cvc {
    margin-left: 5px;
}

.bk-card-date-wrap .bk-date {
    margin: 0 0 0 5px;
    flex: 4;
}
.bk-card-number {
    margin-right: 5px;
    flex: 6;
}
/*======================end creditcards======================================*/
.giftcard-delete:before {
    font-size: 18px;
    line-height: 20px;
    color: #757575;
    content: '\e604';
    font-family: 'luma-icons';
    vertical-align: middle;
    display: inline-block;
    font-weight: normal;
    overflow: hidden;
    speak: none;
    text-align: center;
    cursor: pointer;
}

#bancontactMobilePopup {
    z-index: 200;
}

#buckaroo_magento2_mrcash_qr {
    text-align: center;
}

#buckaroo_magento2_payconiq_container #buckaroo_magento2_mrcash_items {
    display: inline-block;
    max-width: 500px;
}

#buckaroo_magento2_payconiq_container #buckaroo_magento2_mrcash_cancel {
    min-height: 32px;
    margin-top: 20px;
    float: right;
}

#buckaroo_magento2_afterpay_DoB-error,
#buckaroo_magento2_afterpay2_DoB-error{
    color: #e02b27;
    font-size: 1.2rem;
    margin-top: 7px
}

#checkout-step-idin{
    padding: 10px;
    background: #d4eded;
    display: inline-block;
    width: 100%;
}

.onestepcheckout-index-index #checkout-step-idin {
    width: inherit;
}

.buckaroo_idin_left{
    width: 50%;
    float: left;
    margin-top: 10px;
}

.buckaroo_idin_left img{
    float: left;
}

.buckaroo_idin_left span{
    height: 50px;
    vertical-align: middle;
    padding-left: 5px;
    display: table-cell;
}

.buckaroo_idin_right{
    width: 50%;
    float: right;
}

#idin-verification{
    margin-top: 5px;
    width: 100%;
}

.opc-wrapper #step_idin{
    clear: both;
    display: inline-block!important;
    padding-left:10px;
}

.onestepcheckout-index-index .opc-wrapper #step_idin {
    padding-left: 0px;
    margin-bottom: 10px;
}

.buckaroo_magento2_all_giftcards{
    border-top: 1px solid #ccc;
    border-bottom: 1px solid #ccc;
}

/* paybybank */

.bk-toggle-down {
    background-image: url("data:image/svg+xml,%3Csvg width='20px' height='20px' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.293 9.293a1 1 0 0 1 1.414 0L12 14.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 0-1.414z' fill='%230D0D0D'/%3E%3C/svg%3E%0A");
}
.bk-toggle-up {
    background-image: url("data:image/svg+xml,%3Csvg width='20px' height='20px' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11.293 7.293a1 1 0 0 1 1.414 0l6 6a1 1 0 0 1-1.414 1.414L12 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414l6-6z' fill='%230D0D0D'/%3E%3C/svg%3E%0A");
}
.bk-toggle {
    height: 20px;
    width: 20px;
}
.bk-toggle-wrap {
    display: flex;
    align-items: center;
    cursor: pointer;
}
@media screen and (max-width: 768px) {
    .bk-paybybank-selector .bank-method-label img {
        max-width: 30px;
        order: 0;
    }
    .bk-paybybank-selector strong {
        order: 2;
    }
    .bk-paybybank-selector .bank-control {
        display: flex;
        margin:10px 0;
    }
    .bk-paybybank-selector .bank-method-label {
        flex: 1;
        display: flex;
        align-items: center;
    }
    .fieldset > .field .addon .bk-paybybank-selector .bank-method-input {
        order: 1;
        margin:0 10px;
        flex: 0;
    }
}
@media screen and (min-width: 768px) {
    .bk-paybybank-toggle-list {
        display: flex;
        justify-content: center;
        height: 20px;
        margin:10px 0;
        width: 100%;
    }

    .bk-toggle-text {
        margin-left: 10px;
        font-weight: bold;
    }
    .bk-paybybank-selector {
        display: flex;
        flex-wrap: wrap;
        width: 100%;
    }
    .bk-paybybank-selector .radio-group-required {
        display: flex;
        flex-wrap: wrap;
        margin-top: 10px;
    }
    .bk-paybybank-selector .bank-control {
        flex: 25% 0;
        min-width: 55px;
    }
    .bk-paybybank-selector .bank-method-label.bk-bank-selected {
        background-color: #EDEDED;
        color: #000;
        border-radius: 5px;
    }
    .bk-paybybank-selector .bank-method-label {
        padding-bottom: 5px;
        cursor: pointer;
        display: flex;
        flex-direction: column;
        padding-top: 5px;
        align-items: center;
    }
    .bk-paybybank-selector .bank-method-label strong {
            display: block;
            text-align: center;
            font-size: 12px;
            flex: 100% 0 0;
    }
    .bk-paybybank-selector .bank-method-label img {
        padding: 10px 20px;
    }

    .fieldset > .field .addon .bk-paybybank-selector .bank-method-input {
        display:none;
    }
}

